Изменил проверку существующих бронирований